# lead-android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/caozhanhao/lead/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/html/: passed.html
app/src/main/assets/js/: lead.js
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/lead/: server.hpp  user.hpp
app/src/main/cpp/leveldb/: CMakeLists.txt
app/src/main/cpp/src/: main.cpp  server.cpp  user.cpp
app/src/main/java/com/caozhanhao/lead/: MainActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/caozhanhao/lead/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
